# ChangeLog for app-editors/emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Dec 2007; Christian Faulhammer <opfer@gentoo.org> emacs-22.1-r3.ebuild:
  sync with Portage: make some variables local and add quotes

  01 Dec 2007; Christian Faulhammer <opfer@gentoo.org> emacs-22.1-r3.ebuild:
  Sync with Portage: Rename site-file from 00 -> 10 for USE=source

  27 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.1-format-int.patch, -emacs-22.1-r2.ebuild,
  +emacs-22.1-r3.ebuild:
  Sync with Portage.

  22 Nov 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r2.ebuild:
  Fix alsa dependency, thanks Flameeyes for pointing this out.

  07 Nov 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.1-hack-local-variables.patch, -emacs-22.1-r1.ebuild,
  +emacs-22.1-r2.ebuild:
  Sync with Portage, fixing bug #197958.

  10 Oct 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r1.ebuild:
  Don't PROVIDE=virtual/editor as it is a new-style virtual now.

  26 Sep 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r1.ebuild:
  Sync with Portage: Change WANT_AUTOCONF to 2.5, add some keywords.

  25 Aug 2007; Ulrich Mueller <ulm@gentoo.org> emacs-22.1-r1.ebuild:
  No need to recompile if we have bootstrapped before.

  25 Aug 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/emacs-22.1-backup-buffer.patch, emacs-22.1-r1.ebuild:
  sync with Portage

  14 Jul 2007; Ulrich Mueller <ulm@gentoo.org>
  +files/emacs-22.1-Xaw3d-headers.patch,
  +files/emacs-22.1-disable_alsa_detection.patch,
  +files/emacs-22.1-freebsd-sparc.patch,
  +files/emacs-22.1-oldxmenu-qa.patch, +files/emacs-22.1-xembed.patch,
  +metadata.xml, +emacs-22.1.ebuild:
  XEmbed support, see bug #185064.
