@@ -7,6 +7,6 @@ AUX emacs-22.1-hack-local-variables.patch 561 RMD160 248f09898369161dcd0e3148c7f
 AUX emacs-22.1-oldxmenu-qa.patch 448 RMD160 ac5b0e57569f0963862ded46953be899fb637590 SHA1 10887f5e0ccebde6715307fdc59faa8f826dd597 SHA256 3039fa8eedc22c638e706123bd1affb0f736a53bf0ebc68566678ead92a4c590
 AUX emacs-22.1-xembed.patch 12136 RMD160 96bf6095e8b6af78f7a5289820bde3a7043e74d8 SHA1 570faf7fa854624ea8f00df38a59c9b83f673f00 SHA256 ba41d8bf8830c657565c9ecc506d662f0eb45043e5aa2ea374031ba3185011f7
 DIST emacs-22.1.tar.gz 38172226 RMD160 da5360871db8b1d473ff7f0b0937ee6c278c0b19 SHA1 327664173eabe5db49d4e7e4a4b1794577af902e SHA256 1ec43bef7127e572f92d7c3a846951cf8e263e27445c62c867035f94681c3ed0
-EBUILD emacs-22.1-r3.ebuild 7823 RMD160 585f7c12e8d6bad59bca20968417531a19eca00d SHA1 b6e01f6402cc59259804138088cd3fcb19d55d67 SHA256 4bacf10b88d8fe63478861330e979e138ecafae4c0ac23f62fa2972999571f30
-MISC ChangeLog 1737 RMD160 941f6c567058a44c4e2b22e8938e0f17a814eb29 SHA1 98f40a289f96c60ffca6a6f4bd2d8414d615cd5d SHA256 0f2894d77032d5b0809f9d866d67842b4d5016ed7225583840ef296f1899153a
+EBUILD emacs-22.1-r3.ebuild 7885 RMD160 d83832fdb936b3fd605cce9a4e242f4bec2ecc71 SHA1 5fe9ac1e3071ee2f60e104af50d3ad433f1207f2 SHA256 180e5a9c72bc2331d361e0de99c6eddd0540f66c02858c618beb14dee520de69
+MISC ChangeLog 1880 RMD160 4ba6c39a518a43771c4f4473e46b50cb51bf764b SHA1 b283bf82905474440983f34c9fbf30cad5d32c3f SHA256 ca238884fdac64a137a146b80091edcee65bada18b32796d0a5a288fbe6722fd
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
